force-app/main/default/objects/RV_Offer_Tracking__c/RV_Offer_Tracking__c.object-meta.xml
<CustomObject>
    <label>Offer Tracking</label>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>Offer Tracking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offer Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>