force-app/main/default/objects/RV_Offer_Tracking__c/fields/is_Active__c.field-meta.xml
<CustomField>
    <fullName>is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>