force-app/main/default/objects/RV_Offer_Tracking__c/fields/MRC_Header__c.field-meta.xml
<CustomField>
    <fullName>MRC_Header__c</fullName>
    <label>MRC Header</label>
    <length>20</length>
    <type>Text</type>
</CustomField>