force-app/main/default/objects/RV_Offer_Tracking__c/fields/MRC_line_item__c.field-meta.xml
<CustomField>
    <fullName>MRC_line_item__c</fullName>
    <label>MRC line item</label>
    <length>20</length>
    <type>Text</type>
</CustomField>