force-app/main/default/objects/RV_Offer_Tracking__c/fields/Offered_Price_100l__c.field-meta.xml
<CustomField>
    <fullName>Offered_Price_100l__c</fullName>
    <label>Offered Price €/100l</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>