force-app/main/default/objects/RV_Offer_Tracking__c/fields/Ship_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Offer Trackings (Ship To Name)</relationshipLabel>
    <relationshipName>Offer_Trackings1</relationshipName>
    <type>Lookup</type>
</CustomField>