force-app/main/default/objects/RV_Offer_Tracking__c/fields/Sold_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Offer Trackings</relationshipLabel>
    <relationshipName>Offer_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>