force-app/main/default/objects/RV_Offer_Tracking__c/fields/Sold_To_Number__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Number__c</fullName>
    <label>Sold To Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>