force-app/main/default/objects/RV_Offer_Tracking__c/fields/Total_Offered_Volume_in_cbm__c.field-meta.xml
<CustomField>
    <fullName>Total_Offered_Volume_in_cbm__c</fullName>
    <label>Total Offered Volume in cbm</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>