force-app/main/default/objects/RV_Offer_Tracking__c/fields/Window_Tranche__c.field-meta.xml
<CustomField>
    <fullName>Window_Tranche__c</fullName>
    <label>Window/Tranche</label>
    <length>20</length>
    <type>Text</type>
</CustomField>